Fix deprecation warnings and linter issues
- Replace deprecated URL(String) constructor with URI.toURL()
- Change Throwable to Exception in catch block for better specificity
- Add URISyntaxException handling for URI creation
- All deprecation warnings resolved
- Project compiles cleanly with no warnings